--- a/css/style.css
+++ b/css/style.css
@@ -1,36 +1,22 @@
-body,
-div,
-ul,
-li,
-p,
-h1,
-h2,
-h3,
-h4,
-h5,
-h6 {
-  padding:0;
-  margin:0;
+body, div, ul, li, p, h1, h2, h3, h4, h5, h6 {
+  padding: 0;
+  margin: 0;
   font-family: "Roboto", sans-serif;
+  font-size: 16px;
+  line-height: 1.4em;
 }
-
 .clear-fix {
   overflow: auto;
 }
-
-.education-entry,
-.work-entry,
-.project-entry {
-  padding: 0 5%;
+.education-entry, .work-entry, .project-entry {
+  padding: 5px 5%;
 }
-
 h1 {
   font-size: 40px;
   color: #f5a623;
   line-height: 48px;
   display: inline;
 }
-
 h2 {
   font-weight: bold;
   font-size: 24px;
@@ -38,30 +24,21 @@ h2 {
   line-height: 29px;
   padding: 10px;
 }
-
 h3 {
   font-style: italic;
   font-size: 20px;
   color: #000;
   line-height: 22px;
 }
-
 h4 {
   font-weight: bold;
   font-size: 14px;
   color: #4a4a4a;
   line-height: 17px;
 }
-
-h2,
-h3,
-h4,
-h5 {
-  padding:10px 5%;
-
+h2, h3, h4, h5 {
+  padding: 10px 5%;
 }
-
-
 .date-text {
   font-style: italic;
   font-size: 14px;
@@ -69,111 +46,104 @@ h5 {
   line-height: 16px;
   float: left;
 }
-
 .location-text {
   font-style: italic;
   font-size: 14px;
   color: #999;
   line-height: 16px;
   float: right;
-
 }
-
 p {
   font-size: 14px;
   color: #333;
   line-height: 21px;
 }
-
 a {
   color: #1199c3;
   text-decoration: none;
   margin-top: 10px;
   display: block;
 }
-
 .welcome-message {
   font-style: italic;
   font-size: 18px;
   color: #f3f3f3;
   line-height: 28px;
+  padding: 0px;
 }
-
 #skills-h3 {
   color: #f5ae23;
   display: none;
 }
-
+#skills {
+  flex-direction: column;
+  padding: 0;
+}
+#skills li {
+  line-height: 1.5em;
+}
+#skills li span {
+  padding: 0;
+}
 .orange {
   background-color: #f5ae23;
 }
-
 .orange-text {
   color: #f5ae23;
 }
-
 .white-text {
   font-weight: bold;
   color: #fff;
 }
-
 .gray {
   background-color: #f3f3f3;
   padding-bottom: 10px;
-  clear:both;
+  clear: both;
 }
-
 .dark-gray {
   background-color: #4a4a4a;
 }
 
 /* TODO: Replace with image later */
+
 #header {
   background-color: #484848;
 }
-
 .flex-box {
   display: -webkit-flex;
   display: flex;
   flex-direction: row;
   flex-wrap: wrap;
-  justify-content: space-around;
+  justify-content: space-between;
   padding: 10px;
 }
-
 .center-content {
   padding: 2.5% 5%;
 }
-
 ul {
   list-style-type: none;
 }
-
 .biopic {
   float: left;
-  padding: 10px;
+  padding: 5px;
   width: 200px;
   display: none;
+  margin-right: 15px;
 }
-
 img {
   padding: 10px;
 }
-
-.project-entry img{
+.project-entry img {
   max-width: 50vw;
 }
-
 @media (max-width: 550px) {
-  .project-entry img{
+  .project-entry img {
     max-width: 80vw;
   }
 }
-
 span {
   padding: 5px;
 }
-
 #lets-connect {
   text-align: center;
 }
@@ -185,13 +155,11 @@ span {
     margin-top: 5%;
   }
 }
-
 @media only screen and (max-width:900px) {
   .biopic {
     width: 175px;
   }
 }
-
 @media only screen and (max-width: 750px) {
   #lets-connect {
     margin-top: 10%;
@@ -202,23 +170,29 @@ span {
   .welcome-message {
     display: none;
   }
+  #skills {
+    flex-direction: row;
+    padding: 15px;
+  }
 }
-
 #map {
   display: block;
   height: 100%;
   margin: 0 5%;
 }
-
 #mapDiv {
   height: 400px;
   width: 100%;
   padding-bottom: 5%;
 }
-
 @media only screen and (min-width: 750px) {
-  #skills-h3,
-  .biopic {
+  #skills-h3, .biopic {
     display: block;
   }
+}
+#topContacts {
+  margin-bottom: 0.5vh;
+}
+#topContacts li {
+  padding: 5px;
 }
